--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <div id="chat">
         <div id="chat-window">
             <div id="output"></div>
+            <div id="feedback"></div>
         </div>
         <input id="handle" type="text" placeholder="Handle" maxlength="20"/>
         <input id="message" type="text" placeholder="Message" maxlength="100"/>
